tests/ui/coherence/coherence-blanket-conflicts-with-specific.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `MyType`
  --> $DIR/coherence-blanket-conflicts-with-specific.rs:19:1
   |
LL | impl<T> MyTrait for T {
   | --------------------- first implementation here
...
LL | impl MyTrait for MyType {
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MyType`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0119`.
